# finerworks

./: .gitignore  LICENSE  README.md  finerworks.py  requirements-dev.txt  requirements.txt  setup.cfg  tasks.py
.github/workflows/: code_quality.yml  hello.yml  linting.yml
finerworks/: __init__.py  exceptions.py
