[metadata]
name = finerworks
version = 0.0.1
author = Jordan Berry
author_email = cmd404notfound@gmail.com
description = REST API Integration with Finerworks Art printing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cmd-not-found/finerworks
project_urls =
    Bug Tracker = https://github.com/cmd-not-found/finerworks/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

packages = find:
python_requires = >=3.6
install_requires =
    requests

[flake8]
max-line-length = 100

[pycodestyle]
max-line-length = 100